force-app/main/default/objects/AEQCC_Variance__c/AEQCC_Variance__c.object-meta.xml
<CustomObject>
    <label>AMEX Variance</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>AEQCC Variance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMEX Variance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>