force-app/main/default/objects/AEQCC_Variance__c/fields/LYTD_Domestic_Other_Carrier_Marketshare__c.field-meta.xml
<CustomField>
    <fullName>LYTD_Domestic_Other_Carrier_Marketshare__c</fullName>
    <formula>IF( LYTD_Total_Dom_Revenue__c != 0,   LYTD_Domestic_Other_Carrier_Revenue__c  / LYTD_Total_Dom_Revenue__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LYTD Domestic Other Carrier Marketshare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>