force-app/main/default/objects/AEQCC_Variance__c/fields/LYTD_Domestic_Qantas_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LYTD_Domestic_Qantas_Revenue__c</fullName>
    <label>LYTD Domestic Qantas Revenue</label>
    <summarizedField>AEQCC_Performance__c.YTD_QF_Dom_CV__c</summarizedField>
    <summaryFilterItems>
        <field>AEQCC_Performance__c.Rollup__c</field>
        <operation>equals</operation>
        <value>LY</value>
    </summaryFilterItems>
    <summaryForeignKey>AEQCC_Performance__c.Variance_Link__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>