force-app/main/default/objects/AEQCC_Variance__c/fields/LYTD_International_Other_Carrier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LYTD_International_Other_Carrier_Revenue__c</fullName>
    <label>LYTD International Other Carrier Revenue</label>
    <summarizedField>AEQCC_Performance__c.YTD_Other_Airlines_Intl_CV__c</summarizedField>
    <summaryFilterItems>
        <field>AEQCC_Performance__c.Rollup__c</field>
        <operation>equals</operation>
        <value>LY</value>
    </summaryFilterItems>
    <summaryForeignKey>AEQCC_Performance__c.Variance_Link__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>