force-app/main/default/objects/AEQCC_Variance__c/fields/LYTD_International_Qantas_Marketshare__c.field-meta.xml
<CustomField>
    <fullName>LYTD_International_Qantas_Marketshare__c</fullName>
    <formula>IF( LYTD_Total_Intl_Revenue__c != 0,  LYTD_International_Qantas_Revenue__c  / LYTD_Total_Intl_Revenue__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LYTD International Qantas Marketshare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>