force-app/main/default/objects/AEQCC_Variance__c/fields/LYTD_Total_Dom_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LYTD_Total_Dom_Revenue__c</fullName>
    <formula>LYTD_Domestic_Other_Carrier_Revenue__c  +  LYTD_Domestic_Qantas_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LYTD Total Dom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>