force-app/main/default/objects/AEQCC_Variance__c/fields/Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Link__c</fullName>
    <label>Product Link</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Registration__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>AEQCC Registration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Registration__c</referenceTo>
    <relationshipLabel>AMEX Variance</relationshipLabel>
    <relationshipName>AEQCC_Variance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>