force-app/main/default/objects/AEQCC_Variance__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reporting Period</label>
    <length>10</length>
    <type>Text</type>
</CustomField>