force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Dom_Other_Carrier_Marketshare__c.field-meta.xml
<CustomField>
    <fullName>YoY_Dom_Other_Carrier_Marketshare__c</fullName>
    <formula>( YTD_Domestic_Other_Carrier_Marketshare__c - LYTD_Domestic_Other_Carrier_Marketshare__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Dom Other Carrier Marketshare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>