force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Dom_Other_Carrier_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YoY_Dom_Other_Carrier_Revenue__c</fullName>
    <formula>IF(   LYTD_Domestic_Other_Carrier_Revenue__c != 0,((  YTD_Domestic_Other_Carrier_Revenue__c -LYTD_Domestic_Other_Carrier_Revenue__c) / LYTD_Domestic_Other_Carrier_Revenue__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Dom Other Carrier Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>