force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Dom_Other_Carrier_Revenue_Indicator__c.field-meta.xml
<CustomField>
    <fullName>YoY_Dom_Other_Carrier_Revenue_Indicator__c</fullName>
    <formula>IF( YoY_Dom_Other_Carrier_Revenue__c != 0, 
IF( 
(YoY_Dom_Other_Carrier_Revenue__c &gt;= 0.1), 
IMAGE(&quot;/resource/Red_up&quot;, &quot;Up&quot;), 
IF( 
(YoY_Dom_Other_Carrier_Revenue__c &lt;= - 0.1), 
IMAGE(&quot;/resource/Green_Down&quot;, &quot;Down&quot;), 
IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
) 
), 
IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Dom Other Carrier Revenue Indicator</label>
    <type>Text</type>
</CustomField>