force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Domestic_Qantas_Marketshare__c.field-meta.xml
<CustomField>
    <fullName>YoY_Domestic_Qantas_Marketshare__c</fullName>
    <formula>( YTD_Domestic_Qantas_Marketshare__c  -  LYTD_Domestic_Qantas_Marketshare__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Domestic Qantas Marketshare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>