force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Intl_Other_Carrier_Marketshare__c.field-meta.xml
<CustomField>
    <fullName>YoY_Intl_Other_Carrier_Marketshare__c</fullName>
    <formula>( YTD_Int_Other_Carrier_Marketshare__c - LYTD_International_Other_Carrier_Markets__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Intl Other Carrier Marketshare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>