force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Intl_Qantas_MarketShare__c.field-meta.xml
<CustomField>
    <fullName>YoY_Intl_Qantas_MarketShare__c</fullName>
    <formula>( YTD_International_Qantas_Marketshare__c  -  LYTD_International_Qantas_Marketshare__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Intl Qantas MarketShare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>