force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Intl_Qantas_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YoY_Intl_Qantas_Revenue__c</fullName>
    <formula>IF(   LYTD_International_Qantas_Revenue__c   != 0,((  YTD_International_Qantas_Revenue__c -LYTD_International_Qantas_Revenue__c   ) / LYTD_International_Qantas_Revenue__c   ),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Intl Qantas Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>