force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Total_Air_Revenue_Indicator__c.field-meta.xml
<CustomField>
    <fullName>YoY_Total_Air_Revenue_Indicator__c</fullName>
    <formula>IF( YoY_Total_Air_Reveue__c != 0, 
IF( 
(YoY_Total_Air_Reveue__c &gt;= 0.001), 
IMAGE(&quot;/resource/Green_Up&quot;, &quot;Up&quot;), 
IF( 
(YoY_Total_Air_Reveue__c &lt;= - 0.001), 
IMAGE(&quot;/resource/Red_Down&quot;, &quot;Down&quot;), 
IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
) 
), 
IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;)
)</formula>
    <label>YoY Total Air Revenue Indicator</label>
    <type>Text</type>
</CustomField>