force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Total_Air_Reveue__c.field-meta.xml
<CustomField>
    <fullName>YoY_Total_Air_Reveue__c</fullName>
    <formula>IF(   LYTD_Total_Air_Revenue__c != 0,((  YTD_Total_Air_Revenue__c -LYTD_Total_Air_Revenue__c ) / LYTD_Total_Air_Revenue__c ),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Total Air Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>