force-app/main/default/objects/AEQCC_Variance__c/fields/YoY_Total_Other_Carrier_Revenue_Indicato__c.field-meta.xml
<CustomField>
    <fullName>YoY_Total_Other_Carrier_Revenue_Indicato__c</fullName>
    <formula>IF( YoY_Total_Other_Carrier_Revenue__c != 0, 
IF( 
(YoY_Total_Other_Carrier_Revenue__c &gt;= 0.001), 
IMAGE(&quot;/resource/Red_up&quot;, &quot;Up&quot;), 
IF( 
(YoY_Total_Other_Carrier_Revenue__c &lt;= - 0.001), 
IMAGE(&quot;/resource/Green_Down&quot;, &quot;Down&quot;), 
IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
) 
), 
IMAGE(&quot;/resource/Inc_NoChange&quot;, &quot;No Change&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoY Total Other Carrier Rev Indicator</label>
    <type>Text</type>
</CustomField>