force-app/main/default/objects/AEQCC_Variance__c/fields/YTD_Int_Other_Carrier_Marketshare__c.field-meta.xml
<CustomField>
    <fullName>YTD_Int_Other_Carrier_Marketshare__c</fullName>
    <formula>IF( YTD_Total_Intl_Revenue__c != 0,  YTD_International_Other_Carrier_Revenue__c / YTD_Total_Intl_Revenue__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Intl Other Carrier Marketshare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>