force-app/main/default/objects/AEQCC_Variance__c/fields/YTD_Total_Air_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Air_Revenue__c</fullName>
    <formula>YTD_Total_Other_Carrier_Revenue__c +  YTD_Total_Qantas_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Total Air Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>