force-app/main/default/objects/AEQCC_Variance__c/fields/YTD_Total_Intl_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Total_Intl_Revenue__c</fullName>
    <formula>YTD_International_Other_Carrier_Revenue__c  +  YTD_International_Qantas_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Total Intl Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>